scaffolded sum stuff

--- a/TimeServed/appsettings.json
+++ b/TimeServed/appsettings.json
@@ -7,5 +7,9 @@
       "Default": "Warning"
     }
   },
+  "UserSettings": {
+    "UserEmail": "johndoe@email.com",
+    "UserPassword": "P@ssw0rd"
+  },
   "AllowedHosts": "*"
 }
