roles are working, superadmin is in place and all new accounts default to attorney

--- a/TimeServed/appsettings.json
+++ b/TimeServed/appsettings.json
@@ -9,7 +9,10 @@
   },
   "UserSettings": {
     "UserEmail": "johndoe@email.com",
-    "UserPassword": "P@ssw0rd"
+    "UserPassword": "P@ssw0rd",
+    "FirstName": "John",
+    "LastName": "Doe",
+    "StreetAddress" : "100 Admin Street"
   },
   "AllowedHosts": "*"
 }
